package es.ull.patrones.practica3.Elements;

public interface Ball {
    void throwBall();
    String getDescription();

    public String getName();
}
