package es.ull.patrones.practica3.Elements;

public interface TShirt {
    void wearTShirt();
    String getDescription();
}
